--- a/themes/meilidu/layout/_widgets/greeting.ejs
+++ b/themes/meilidu/layout/_widgets/greeting.ejs
@@ -2,13 +2,19 @@
 	<br />
 	<p align="center"> 
 		<font size="4"> 
+			<!--
 			Learn from yesterday, <br />
 			live for today, <br />
 			hope for tomorrow. <br />
 			The important thing is not to stop questioning. <br /> <br />
+			-->
+			Everyone you will ever meet knows something you don't. <br /> <br /> 
 		</font>
 	</p>
 	<p align="right">
+		<!--
 		-- <i> Albert Einstein </i>
+		-->
+		-- <i> Bill Nye </i>
 	</p>
 </div>
